refactor: update state labels in localization files and remove unused components in TravelPage

--- a/common/locales/de.json
+++ b/common/locales/de.json
@@ -647,7 +647,7 @@
   "settings": {},
   "states": {
     "APPLIED_FOR": "Beantragt",
-    "APPROVED": "Genehmigt",
+    "APPROVED": "In Vorbereitung",
     "BOOKED": "Gebucht",
     "IN_REVIEW": "Wird Geprüft",
     "IN_WORK": "In Arbeit",
