--- a/common/locales/en.json
+++ b/common/locales/en.json
@@ -76,7 +76,7 @@
     "login": "Login",
     "logout": "Logout",
     "settings": "Settings",
-    "title": "abrechnung"
+    "title": "DMUN Abrechnung"
   },
   "info": {
     "advance": "Select the advances you want to offset against your expenses here.",
