fix: update transport labels for clarity in localization files

--- a/common/locales/de.json
+++ b/common/locales/de.json
@@ -370,7 +370,7 @@
     "optional": "optional",
     "organisation": "Organisation",
     "organisations": "Organisationen",
-    "otherTransport": "Anderes Verkehrsmittel 🚆🚖",
+    "otherTransport": "Bahn 🚆",
     "overnight": "Übernachtung",
     "overnightRefund": "Übernachtungspauschale",
     "overwrite": "Überschreiben",
@@ -415,7 +415,7 @@
     "sendPDFReportsToOrganisationEmail": "PDF Berichte an Organisations-E-Mail senden",
     "setSelectedToBooked": "Auswahl auf @:{'states.BOOKED'} setzen",
     "settings": "Einstellungen",
-    "shipOrFerry": "Schiff oder Fähre 🚢",
+    "shipOrFerry": "Anderes Verkehrsmittel 🚢",
     "show": "Anzeigen",
     "showInstallBanner": "Installationshinweis anzeigen",
     "showX": "{X} anzeigen",
