--- a/common/locales/en.json
+++ b/common/locales/en.json
@@ -370,7 +370,7 @@
     "optional": "optional",
     "organisation": "Organisation",
     "organisations": "Organisations",
-    "otherTransport": "Other transport 🚆🚖",
+    "otherTransport": "Train 🚆",
     "overnight": "Overnight",
     "overnightRefund": "No overnight refund",
     "overwrite": "Overwrite",
@@ -415,7 +415,7 @@
     "sendPDFReportsToOrganisationEmail": "Send PDF reports to organisation email",
     "setSelectedToBooked": "Set Selected to @:{'states.BOOKED'}",
     "settings": "Settings",
-    "shipOrFerry": "Ship or ferry 🚢",
+    "shipOrFerry": "Other transport 🚢",
     "show": "Show",
     "showInstallBanner": "Show install banner",
     "showX": "Show {X}",
