refactor: update translation for 'appliedForOn' to improve clarity

--- a/common/locales/de.json
+++ b/common/locales/de.json
@@ -191,7 +191,7 @@
     "allowTravelApplicationForThePast": "Reiseanträge für die Vergangenheit erlauben",
     "amount": "Betrag",
     "applicant": "Antragsteller",
-    "appliedForOn": "Beantragt am",
+    "appliedForOn": "Angelegt am",
     "applyForX": "{X} beantragen",
     "approve": "Genehmigen",
     "approvedBy": "Genehmigt von",
