refactor: update reason label to clarify input requirements in localization files

--- a/common/locales/de.json
+++ b/common/locales/de.json
@@ -97,7 +97,7 @@
     "professionalShareX%": "Eine Dienstreise darf auch private Anteile haben, der berufliche Anteil muss aber über {X}% liegen.",
     "project": "Wähle das Projekt über das abgerechnet werden soll.",
     "purpose": "Gib hier an welchem Zweck diese Etappe diente.",
-    "reason": "Gib hier kurz den Grund deiner Reise an.",
+    "reason": "Gib hier deine Kontodaten ein.",
     "receipts": "Lade hier die entsprechenden Belege hoch.",
     "special": "Wähle hier eine Stadt aus FALLS eine aus der Auswahl zutrifft. Für einige Städte gibt es nämlich spezielle Pauschalen.",
     "travelInsideOfEU": "Ist deine Reise eine länderübergreifende Reise innerhalb der EU?",
@@ -393,7 +393,7 @@
     "purpose": "Zweck",
     "readOnly": "Schreibgeschützt",
     "reapplyForX": "{X} neu beantragen",
-    "reason": "Grund",
+    "reason": "IBAN / Kontodaten",
     "receipt": "Beleg",
     "receiptNumber": "Beleg Nr.",
     "receipts": "Belege",
