--- a/common/locales/en.json
+++ b/common/locales/en.json
@@ -97,7 +97,7 @@
     "professionalShareX%": "A business trip may also have private components, but these may not account for {X}% or more.",
     "project": "Select the project to be billed.",
     "purpose": "Specify which purpose this stage served.",
-    "reason": "Briefly state the reason for your trip here.",
+    "reason": "Enter your bank details here.",
     "receipts": "Upload the corresponding receipts here.",
     "special": "Select a city here IF one from the selection applies. There are special lump sums for some cities.",
     "travelInsideOfEU": "Is your trip a cross-country trip within the EU?",
@@ -393,7 +393,7 @@
     "purpose": "Purpose",
     "readOnly": "Read only",
     "reapplyForX": "Reapply for {X}",
-    "reason": "Reason",
+    "reason": "IBAN / Bank details",
     "receipt": "Receipt",
     "receiptNumber": "Receipt No.",
     "receipts": "Receipts",
