--- a/common/locales/de.json
+++ b/common/locales/de.json
@@ -1,6 +1,6 @@
 {
   "accesses": {
-    "admin": "Administrator",
+    "admin": "Administrator*in",
     "appliedFor:advance": "Vorschuss beantragen",
     "appliedFor:travel": "Reisekostenabrechnung beantragen",
     "approve/advance": "Vorschuss genehmigen",
@@ -183,7 +183,7 @@
     "addSupervisors": "Betreuenden hinzufügen",
     "addX": "{X} hinzufügen",
     "advance": "Vorschuss",
-    "advanceFromEmployer": "Vorschuss vom Arbeitgeber",
+    "advanceFromEmployer": "Vorschuss von DMUN",
     "advances": "Vorschüsse",
     "airplane": "Flugzeug ✈",
     "alias": "Alias",
@@ -201,7 +201,7 @@
     "assignedProjects": "Zugewiesene Projekte",
     "auth": "Authentifizierung",
     "autoSelectAvailableAdvances": "Passende Vorschüsse automatisch auswählen",
-    "backToApplicant": "Zurück zum Antragsteller",
+    "backToApplicant": "Zurück zum Antragsteller*in",
     "balance": "Saldo",
     "bankDetails": "Bankverbindung",
     "black": "Schwarz",
@@ -282,8 +282,8 @@
     "examine": "Prüfen",
     "examinedBy": "Geprüft von",
     "examinedOn": "Geprüft am",
-    "examinersMail": "Prüfer E-Mail",
-    "examinersMsTeams": "Prüfer MS Teams",
+    "examinersMail": "Prüfer*in E-Mail",
+    "examinersMsTeams": "Prüfer*in MS Teams",
     "expandAll": "Alle ausklappen",
     "expense": "Auslage",
     "expensePayer": "Auslagenzahler",
